fix fullscreen button on mobile

--- a/public/css/bpmn.css
+++ b/public/css/bpmn.css
@@ -99,8 +99,8 @@ body,
 #fullscreen-icon {
     cursor: pointer;
     position: absolute;
-    right: 30px;
-    z-index: 998;
+    right: 20px;
+    z-index: 999;
 }
 
 .in-out {
